# latimer

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  TODOs.md  main.cpp
.github/workflows/: release.yml
ast/: ast.cpp  ast.hpp
docs/: grammar.md  language.md  lexical_analysis.md  parser.md
include/latimer/ast/: ast.hpp  parser.hpp
include/latimer/interpreter/: ast_interpreter.hpp  native_functions.hpp  value.hpp
include/latimer/lexical_analysis/: lexer.hpp  token.hpp
include/latimer/semantic_analysis/: checker.hpp  type.hpp
include/latimer/utils/: ast_printer.hpp  error_handler.hpp  macros.hpp
include/latimer/vm/: ast_interpreter.hpp  value.hpp
lexical_analysis/: lexer.cpp  lexer.hpp  token.hpp
src/: main.cpp
src/ast/: ast.cpp  parser.cpp
src/interpreter/: ast_interpreter.cpp
src/lexical_analysis/: lexer.cpp
src/semantic_analysis/: checker.cpp  type.cpp
src/vm/: ast_interpreter.cpp
utils/: ast_printer.hpp  error_handler.hpp
